trunk/Archive2/d3/06d0c0b268cce0/output
main.cpp:5:15: error: binding of reference to type 'int' to a value of type 'const int' drops qualifiers
    for (int& i : array)
              ^ ~
1 error generated.
